Write the initial css code

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>berries</title>
+  <title>Dung beetle</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Sigmar+One&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Dosis:400,700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -46,7 +46,7 @@
     <dd>Scarabidae</dd>
   </dl>
 
-  <footer><a href="https://en.wikipedia.org/wiki/Dung_beetle">Learn more…</a></footer>
+  <footer><a class="btn" href="https://en.wikipedia.org/wiki/Dung_beetle">Learn more…</a></footer>
 
 </body>
 </html>
