Indent the code

--- a/index.html
+++ b/index.html
@@ -7,46 +7,40 @@
   <link href="css/main.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Dosis:400,700&display=swap" rel="stylesheet">
 </head>
-
 <body>
-  <header>
-    <h1>Dung Beetle</h1>
-  </header>
 
-  <section>
-  <p>Dung beetles are beetles that feed partly or exclusively on dung. A dung beetle can bury dung 250 times heavier than itself in one night.</p>
-  </section>
+  <a class="link-card" href="https://en.wikipedia.org/wiki/Dung_beetle">
+    <h2>Dung Beetle</h2>
 
-  <dl>
-    <dt>Kingdom:</dt>
-    <dd>Animalia</dd>
-  </dl>
-  <dl>
-    <dt>Phylum:</dt>
-    <dd>Arthropoda</dd>
-  </dl>
-  <dl>
-    <dt>Class:</dt>
-    <dd>Insecta</dd>
-  </dl>
-  <dl>
-    <dt>Order: </dt>
-    <dd>Coleoptera</dd>
-  </dl>
-  <dl>
-    <dt>Suborder:</dt>
-    <dd>Polyphaga</dd>
-  </dl>
-  <dl>
-    <dt>Superfamily:</dt>
-    <dd>Scarabaeoidea</dd>
-  </dl>
-  <dl>
-    <dt>Family:</dt>
-    <dd>Scarabidae</dd>
-  </dl>
+    <p>Dung beetles are beetles that feed partly or exclusively on dung. A dung beetle can bury dung 250 times heavier than itself in one night.</p>
 
-  <footer><a class="btn" href="https://en.wikipedia.org/wiki/Dung_beetle">Learn more…</a></footer>
+    <dl>
+      <dt>Kingdom:</dt>
+      <dd>Animalia</dd>
+
+      <dt>Phylum:</dt>
+      <dd>Arthropoda</dd>
+
+      <dt>Class:</dt>
+      <dd>Insecta</dd>
+
+      <dt>Order: </dt>
+      <dd>Coleoptera</dd>
+
+      <dt>Suborder:</dt>
+      <dd>Polyphaga</dd>
+
+      <dt>Superfamily:</dt>
+      <dd>Scarabaeoidea</dd>
+
+      <dt>Family:</dt>
+      <dd>Scarabidae</dd>
+    </dl>
+
+    <div class="">
+      <span class="btn">Learn more…</span>
+    </div>
+  </a>
 
 </body>
 </html>
