Add padding and margins

--- a/index.html
+++ b/index.html
@@ -15,29 +15,31 @@
     <p>Dung beetles are beetles that feed partly or exclusively on dung. A dung beetle can bury dung 250 times heavier than itself in one night.</p>
 
     <dl>
-      <dt>Kingdom:</dt>
-      <dd>Animalia</dd>
+      <span>
+      <dt>Kingdom</dt>
+      <dd><i>Animalia</i></dd>
 
-      <dt>Phylum:</dt>
-      <dd>Arthropoda</dd>
+      <dt>Phylum</dt>
+      <dd><i>Arthropo</i>da</dd>
 
-      <dt>Class:</dt>
-      <dd>Insecta</dd>
+      <dt>Class</dt>
+      <dd><i>Insecta</i></dd>
 
-      <dt>Order: </dt>
-      <dd>Coleoptera</dd>
+      <dt>Order</dt>
+      <dd><i>Coleoptera</i></dd>
 
-      <dt>Suborder:</dt>
-      <dd>Polyphaga</dd>
+      <dt>Suborder</dt>
+      <dd><i>Polyphag</i>a</dd>
 
-      <dt>Superfamily:</dt>
-      <dd>Scarabaeoidea</dd>
+      <dt>Superfamily</dt>
+      <dd><i>Scarabaeoidea</i></dd>
 
-      <dt>Family:</dt>
-      <dd>Scarabidae</dd>
+      <dt>Family</dt>
+      <dd><i>Scarabidae</i></dd>
+      </span>
     </dl>
 
-    <div class="">
+    <div>
       <span class="btn">Learn more…</span>
     </div>
   </a>
