Change the font weight and padding

--- a/index.html
+++ b/index.html
@@ -15,12 +15,11 @@
     <p>Dung beetles are beetles that feed partly or exclusively on dung. A dung beetle can bury dung 250 times heavier than itself in one night.</p>
 
     <dl>
-      <span>
       <dt>Kingdom</dt>
       <dd><i>Animalia</i></dd>
 
       <dt>Phylum</dt>
-      <dd><i>Arthropo</i>da</dd>
+      <dd><i>Arthropoda</i></dd>
 
       <dt>Class</dt>
       <dd><i>Insecta</i></dd>
@@ -36,7 +35,6 @@
 
       <dt>Family</dt>
       <dd><i>Scarabidae</i></dd>
-      </span>
     </dl>
 
     <div>
